--- a/app/css/main.css
+++ b/app/css/main.css
@@ -29,10 +29,12 @@
   --shadow-sm: 0px 0px .625rem .125rem rgba(0,0,0,0.25);
   --transition-duration: 300ms;
   --transition-timing-function: ease-in-out;
+  --header-padding: 3rem;
 }
 @media (max-width: 992px) {
   :root {
     --fs-base: 1rem;
+    --header-padding: 2.5rem;
   }
 }
 
@@ -151,6 +153,7 @@ a {
 }
 
 .container {
+  width: 100%;
   margin: 0 auto;
   padding: 0 var(--container-offset);
   max-width: var(--container-width);
@@ -288,6 +291,9 @@ a {
     font-size: 8.5rem;
   }
 }
+.section-title + .section-subtitle {
+  margin-top: 1rem;
+}
 @media (min-width: 992px) {
   .section-title-start {
     width: 45%;
@@ -304,14 +310,14 @@ a {
 .section-subtitle {
   font-size: 1.5rem;
 }
-@media (min-width: 1400px) {
-  .section-subtitle {
-    font-size: 2.25rem;
-  }
-}
 @media (min-width: 1200px) {
   .section-subtitle {
     font-size: 1.75rem;
+  }
+}
+@media (min-width: 1400px) {
+  .section-subtitle {
+    font-size: 2.25rem;
   }
 }
 
@@ -397,10 +403,10 @@ a {
   -webkit-transform: var(--_transform);
   -ms-transform: var(--_transform);
   transform: var(--_transform);
-  -webkit-transition-property: color, background, border, -webkit-transform;
-  transition-property: color, background, border, -webkit-transform;
-  transition-property: color, background, border, transform;
-  transition-property: color, background, border, transform, -webkit-transform;
+  -webkit-transition-property: color, text-shadow, background, border, -webkit-transform;
+  transition-property: color, text-shadow, background, border, -webkit-transform;
+  transition-property: color, text-shadow, background, border, transform;
+  transition-property: color, text-shadow, background, border, transform, -webkit-transform;
   -webkit-transition-duration: var(--_transition-duration);
   transition-duration: var(--_transition-duration);
   -webkit-transition-timing-function: var(--_transition-timing-function);
@@ -768,6 +774,19 @@ b {
   text-underline-offset: 0.125em;
 }
 
+.stretched-link {
+  position: absolute;
+  inset: 0;
+}
+.stretched-link::after {
+  content: "";
+  display: block;
+  cursor: pointer;
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+}
+
 .burger .icon {
   width: 2rem;
   height: 1rem;
@@ -929,7 +948,7 @@ b {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding-block: 3rem;
+  padding-block: var(--header-padding);
 }
 .main-swiper-slide > .container {
   height: 100%;
@@ -961,6 +980,7 @@ b {
   }
 }
 .main-swiper-slide-container {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1043,6 +1063,8 @@ b {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 0.375em;
 }
 
@@ -1084,7 +1106,7 @@ b {
   --bs-offcanvas-zindex: 1045;
   --bs-offcanvas-width: 100%;
   --bs-offcanvas-height: 100%;
-  --bs-offcanvas-padding: 3rem var(--container-offset);
+  --bs-offcanvas-padding: var(--header-padding) var(--container-offset);
   --bs-offcanvas-color: var(--gray-300);
   --bs-offcanvas-bg: rgba(var(--gray-500-rgb), .5);
   --bs-offcanvas-border-width: 0;
@@ -1097,7 +1119,6 @@ b {
   .offcanvas {
     --bs-offcanvas-width: 25rem;
     --bs-offcanvas-padding: 3rem 4rem;
-    --bs-offcanvas-bg: var(--gray-500);
   }
 }
 
@@ -1120,12 +1141,8 @@ b {
   outline: 0;
   -webkit-transition: var(--bs-offcanvas-transition);
   transition: var(--bs-offcanvas-transition);
-}
-@media (max-width: 992px) {
-  .offcanvas {
-    -webkit-backdrop-filter: blur(1.25rem);
-    backdrop-filter: blur(1.25rem);
-  }
+  -webkit-backdrop-filter: blur(1.25rem);
+  backdrop-filter: blur(1.25rem);
 }
 .offcanvas.offcanvas-start {
   top: 0;
@@ -1352,6 +1369,8 @@ b {
   background-clip: padding-box;
   border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
   border-radius: var(--bs-modal-border-radius);
+  -webkit-box-shadow: var(--shadow-sm);
+  box-shadow: var(--shadow-sm);
   outline: 0;
 }
 
@@ -1534,11 +1553,6 @@ b {
   --bs-modal-border-radius: 1.25rem;
   --bs-modal-padding: 0;
 }
-.modal-picture .modal-content,
-.modal-video .modal-content {
-  -webkit-box-shadow: var(--shadow-sm);
-  box-shadow: var(--shadow-sm);
-}
 .modal-picture .modal-body,
 .modal-video .modal-body {
   min-height: initial;
@@ -1555,6 +1569,7 @@ b {
   max-height: calc(100vh - 3rem);
   max-height: calc(100svh - 3rem);
   max-height: calc(100dvh - 3rem);
+  display: block;
   border-radius: var(--bs-modal-border-radius);
 }
 
@@ -1600,6 +1615,12 @@ b {
   border-radius: inherit;
 }
 
+@media (max-width: 992px) {
+  .contacts-nav .nav__item:first-child {
+    display: none;
+  }
+}
+
 .social {
   width: auto;
   display: -webkit-box;
@@ -1632,13 +1653,23 @@ b {
 
 .header {
   color: var(--gray);
-  padding-block: 3rem;
+  padding-block: var(--header-padding);
   pointer-events: none;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   z-index: 1030;
+  -webkit-transition-property: background;
+  transition-property: background;
+  -webkit-transition-duration: var(--transition-duration);
+  transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-timing-function);
+  transition-timing-function: var(--transition-timing-function);
+}
+.header--shop {
+  pointer-events: auto;
+  background-color: var(--body-bg);
 }
 .header-container {
   display: -webkit-box;
@@ -1991,5 +2022,245 @@ b {
 @media (min-width: 992px) {
   .press .cards-swiper {
     margin-bottom: 2.875rem;
+  }
+}
+
+.shop {
+  padding-bottom: 0rem;
+}
+@media (max-width: 992px) {
+  .shop {
+    height: 100%;
+    min-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+}
+@media (max-width: 992px) {
+  .shop .main-swiper-slide-container {
+    height: auto;
+  }
+}
+.shop .section-header {
+  margin-top: 3rem;
+}
+@media (min-width: 992px) {
+  .shop .section-header {
+    margin-top: 5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .shop .section-header {
+    margin-top: 4.75rem;
+  }
+}
+@media (min-width: 1400px) {
+  .shop .section-header {
+    margin-top: 4.25rem;
+  }
+}
+@media (max-width: 992px) {
+  .shop .section-title {
+    font-size: 5.75rem;
+  }
+}
+.shop .section-subtitle {
+  font-size: 0.9375rem;
+  font-weight: 600;
+}
+@media (min-width: 1200px) {
+  .shop .section-subtitle {
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 1400px) {
+  .shop .section-subtitle {
+    font-size: 1.75rem;
+  }
+}
+.shop .swiper-filter {
+  gap: 0.5rem;
+  margin-block: -1rem;
+  padding-block: 1rem;
+  padding-inline: max(var(--container-offset), (100% - var(--content-width)) / 2);
+  background-color: var(--body-bg);
+  position: sticky;
+  top: calc(var(--header-height, 6.25rem) - var(--header-padding));
+  left: 0;
+  z-index: 1020;
+}
+@media (min-width: 992px) {
+  .shop .swiper-filter {
+    gap: 0.75rem;
+    position: static;
+  }
+}
+.shop .swiper-filter .btn-check + .btn {
+  --_color: var(--gray-400);
+  --_color-hover: var(--gray-400);
+  --_color-active: var(--gray-400);
+}
+@media (max-width: 992px) {
+  .shop .swiper-filter .btn-check + .btn {
+    --_fs: .75rem;
+  }
+}
+.shop .swiper-filter .btn-check:checked + .btn {
+  --_color: var(--gray-400);
+  --_color-hover: var(--gray-400);
+  --_color-active: var(--gray-400);
+  text-shadow: 0.025em 0 currentColor, 0 0.025em currentColor, -0.025em 0 currentColor, 0 -0.025em currentColor;
+}
+.shop .swiper-filter + .swiper {
+  margin-top: 2rem;
+}
+@media (min-width: 992px) {
+  .shop .swiper-filter + .swiper {
+    margin-top: 5rem;
+  }
+}
+.shop-swiper {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.shop-swiper .swiper {
+  width: 100%;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+@media (max-width: 992px) {
+  .shop-swiper .swiper-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 0.75rem;
+  }
+}
+@media (max-width: 992px) {
+  .shop-swiper .swiper-slide > * {
+    opacity: 1;
+  }
+}
+.shop-card {
+  height: 100%;
+  color: var(--light);
+  position: relative;
+}
+@media (max-width: 992px) {
+  .shop-card {
+    aspect-ratio: 3/4;
+  }
+}
+@media (hover: hover) {
+  .shop-card .stretched-link:hover ~ .shop-card-bg::after {
+    opacity: 0;
+  }
+  .shop-card .stretched-link:hover ~ .shop-card-info {
+    opacity: 1;
+  }
+}
+.shop-card-bg::after, .shop-card-info {
+  background-color: rgba(var(--gray-800-rgb), 0.5);
+  position: absolute;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: var(--transition-duration);
+  transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-timing-function);
+  transition-timing-function: var(--transition-timing-function);
+}
+.shop-card-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  inset: 0;
+}
+.shop-card-bg::after {
+  content: "";
+  display: block;
+  pointer-events: none;
+  inset: 0;
+  opacity: 0;
+}
+@media (hover: hover) {
+  .shop-card-bg::after {
+    opacity: 1;
+  }
+}
+.shop-card-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+@media (min-width: 992px) {
+  .shop-card-info {
+    padding: 1.5rem 3rem;
+  }
+}
+@media (hover: hover) {
+  .shop-card-info {
+    opacity: 0;
+  }
+}
+.shop-card-info-end {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: end;
+}
+.shop-card-title {
+  font-size: 1.25rem;
+  letter-spacing: normal;
+}
+@media (min-width: 992px) {
+  .shop-card-title {
+    font-size: 1.5rem;
+  }
+}
+.shop-card-colors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.375rem;
+}
+@media (min-width: 992px) {
+  .shop-card-colors {
+    gap: 0.5rem;
+  }
+}
+.shop-card-color {
+  --_size: .75rem;
+  --_color: #000;
+  width: var(--_size);
+  height: var(--_size);
+  background-color: var(--_color);
+  border-radius: 50%;
+}
+@media (min-width: 992px) {
+  .shop-card-color {
+    --_size: 1rem;
   }
 }/*# sourceMappingURL=main.css.map */
