--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2536,6 +2536,25 @@ b {
     flex-basis: 50%;
   }
 }
+.product-start {
+  position: relative;
+}
+.product-start .main-swiper-slide-hint {
+  display: none;
+}
+@media (min-width: 768px) {
+  .product-start .main-swiper-slide-hint {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    color: var(--gray-800);
+    position: fixed;
+    left: 0;
+    bottom: 2.5rem;
+    z-index: 1;
+  }
+}
 .product-end {
   position: relative;
   padding-inline: max(var(--container-offset), (100% - var(--content-width)) / 2);
