--- a/app/css/main.css
+++ b/app/css/main.css
@@ -591,6 +591,7 @@ a {
   --_border-width: 1px;
   --_border-solid: solid;
   --_border-color: currentColor;
+  --_rounded: 1.5rem;
   --_padding: .625rem 1rem;
   --_color-hover: var(--gray-800);
   --_bg-hover: transparent;
@@ -608,9 +609,12 @@ a {
   color: var(--_color);
   background-color: var(--_bg);
   border: var(--_border-width) var(--_border-solid) var(--_border-color);
-  border-radius: 1.5rem;
+  border-radius: var(--_rounded);
   padding: var(--_padding);
   outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   -webkit-transition-property: color, background, border;
   transition-property: color, background, border;
   -webkit-transition-duration: var(--transition-duration);
@@ -723,6 +727,9 @@ textarea {
   .form-check {
     font-size: 0.75rem;
   }
+}
+.form-check:not(:first-child) {
+  margin-top: 1.5rem;
 }
 .form-check-label, .form-check-input {
   cursor: pointer;
@@ -2107,10 +2114,13 @@ b {
 }
 .choices__list--dropdown .choices__item, .choices__list[aria-expanded] .choices__item {
   position: relative;
-  padding: 10px;
+  padding: 0.5rem 1rem;
 }
 [dir=rtl] .choices__list--dropdown .choices__item, [dir=rtl] .choices__list[aria-expanded] .choices__item {
   text-align: right;
+}
+.choices__list--dropdown .choices__item.choices__placeholder, .choices__list[aria-expanded] .choices__item.choices__placeholder {
+  display: none;
 }
 .choices__list--dropdown .choices__item--selectable, .choices__list[aria-expanded] .choices__item--selectable {
   color: var(--gray-300);
@@ -3164,7 +3174,7 @@ b {
   color: var(--gray);
   margin-inline: auto;
   padding-inline: var(--container-offset);
-  padding-block: calc(var(--header-height) + 3rem) 3rem;
+  padding-block: calc(var(--header-height) + 2.5rem) 2.5rem;
 }
 @media (min-width: 992px) {
   .cart {
@@ -3304,10 +3314,5 @@ b {
     -webkit-box-pack: end;
     -ms-flex-pack: end;
     justify-content: flex-end;
-  }
-}
-@media (min-width: 992px) {
-  .cart .btn-submit:not(:first-child) {
-    margin-top: 2.5rem;
   }
 }/*# sourceMappingURL=main.css.map */
